# swing-lens

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  asyncio_compat.py  db.py  main.py  settings.py  worker.py
config/: column_aliases.yaml  fundamentals_v2.yaml  pine_defaults.yaml  scoring_weights.yaml  technical_scoring_v4.yaml
docs/: execution_plan_pipeline_jobs_history_dependencies.md  sdd.md  srs.md  vision.md
tests/: test_adaptive_technical_features.py  test_app_lifespan_worker.py  test_background_job_service.py  test_background_worker.py  test_box_breakout.py  test_chart_data_service.py  test_climax_risk.py  test_column_mapping_summary_service.py  test_combined_decision.py  test_confidence_service.py  test_config_files.py  test_csv_upload_services.py  test_dashboard_upload.py  test_earnings_date_parser.py  test_earnings_risk_service.py  test_exports_history.py  test_fetch_progress_phase5.py  test_fundamental_components_v2.py  test_fundamental_coverage_service.py  test_fundamental_ranker.py  test_fundamental_ranker_v2.py  test_fundamentals_v2_acceptance.py  test_golden_pipeline.py  test_gui_phase1.py  test_hardening.py  test_history_query_service.py  test_ib_fetch_executor.py  test_ib_fetch_job_service.py  test_ib_fetch_plan_service.py  test_ib_fetch_summary_service.py  test_ib_rate_limiter.py  test_ib_services.py  test_market_regime.py  test_numeric_parser.py  test_ohlcv_coverage_service.py  test_pagination.py  test_pine_replica_engine.py  test_pipeline_executor.py  (+19 more)
(+97 files in other folders)
