[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swing-lens"
version = "0.1.0"
description = "Local stock research cockpit with CSV fundamentals, IB Gateway OHLCV, and Pine-compatible scoring."
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [
  { name = "Ivica Bogoevski" }
]
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "ib-insync>=0.9.86",
  "jinja2>=3.1",
  "numpy>=2.0",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
